// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkIcon dark mode should apply user props 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(255, 255, 255)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "color": "rgb(7, 112, 227)",
      },
    ]
  }
>
  
</Text>
`;

exports[`Android BpkIcon dark mode should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(255, 255, 255)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
    ]
  }
>
  
</Text>
`;

exports[`Android BpkIcon light mode should apply user props 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(17, 18, 54)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "color": "rgb(7, 112, 227)",
      },
    ]
  }
>
  
</Text>
`;

exports[`Android BpkIcon light mode should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(17, 18, 54)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
    ]
  }
>
  
</Text>
`;

exports[`Android BpkIcon should render small icon correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(17, 18, 54)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
    ]
  }
>
  
</Text>
`;
